Added SlickVerifer 2.0 ALPHA
Changes:
+ Added SlickVerifier class
-- Verification (improved & rebuilt from SV 1.0.1)
-- Hashing
-- UpdateChecker
-- TeamSpeak plugin checker (prototype)
+ Added menu items in ConsoleUI.cs
~ Changed Utility.WebRead (added try-catch)

--- a/ProjectUpdater/ProjectUpdater/ProjectUpdater.csproj
+++ b/ProjectUpdater/ProjectUpdater/ProjectUpdater.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Log.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="RepoGenerator.cs" />
+    <Compile Include="SlickVerifier.cs" />
     <Compile Include="Updater.cs" />
     <Compile Include="Utility.cs" />
     <Page Include="MainWindow.xaml">
