Added Version Wrapper and you can now select repos

--- a/ProjectUpdater/ProjectUpdater/ProjectUpdater.csproj
+++ b/ProjectUpdater/ProjectUpdater/ProjectUpdater.csproj
@@ -71,6 +71,7 @@
     </ApplicationDefinition>
     <Compile Include="Classes.cs" />
     <Compile Include="ConsoleUI.cs" />
+    <Compile Include="VersionWrapper.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="RepoGenerator.cs" />
