Made options menu

--- a/ProjectUpdater/ProjectUpdater/App.config
+++ b/ProjectUpdater/ProjectUpdater/App.config
@@ -10,7 +10,16 @@
     </startup>
     <userSettings>
         <ProjectUpdater.Properties.Settings>
-            <setting name="Setting" serializeAs="String">
+            <setting name="Arma3Path" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Arma2Path" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Arma2OAPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="TeamSpeak3Path" serializeAs="String">
                 <value />
             </setting>
         </ProjectUpdater.Properties.Settings>
