--- a/ProjectUpdater/ProjectUpdater/ProjectUpdater.csproj
+++ b/ProjectUpdater/ProjectUpdater/ProjectUpdater.csproj
@@ -71,6 +71,9 @@
     </ApplicationDefinition>
     <Compile Include="Classes.cs" />
     <Compile Include="ConsoleUI.cs" />
+    <Compile Include="Options.xaml.cs">
+      <DependentUpon>Options.xaml</DependentUpon>
+    </Compile>
     <Compile Include="VersionWrapper.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Program.cs" />
@@ -90,6 +93,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Options.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
