Started on updater implementation

--- a/ProjectUpdater/ProjectUpdater/App.config
+++ b/ProjectUpdater/ProjectUpdater/App.config
@@ -22,6 +22,9 @@
             <setting name="TeamSpeak3Path" serializeAs="String">
                 <value />
             </setting>
+            <setting name="SelectedRepo" serializeAs="String">
+                <value>0</value>
+            </setting>
         </ProjectUpdater.Properties.Settings>
     </userSettings>
 </configuration>
